# brave-core

./: BUILD.gn  package-lock.json  package.json
android/: brave_java_sources.gni
app/: brave_command_ids.h  brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  generated_resources.grd  generated_resources_override.grd  os_settings_strings.grdp  settings_strings.grdp
browser/: BUILD.gn  brave_content_browser_client.cc  brave_content_browser_client.h  brave_profile_prefs.cc  sources.gni
browser/brave_ads/: ads_service_factory.h
browser/brave_ads/notifications/: BUILD.gn  ad_notification_platform_bridge.cc  ad_notification_platform_bridge_android.cc
browser/brave_rewards/: checkout_dialog.cc  checkout_dialog.h  rewards_service_factory.cc  rewards_service_factory.h
browser/brave_shields/: domain_block_page_browsertest.cc
browser/component_updater/: brave_component_updater_delegate.cc
browser/download/: brave_download_item_model.cc  brave_download_item_model.h  sources.gni
browser/ephemeral_storage/: ephemeral_storage_tab_helper.cc  ephemeral_storage_tab_helper.h
browser/extensions/: brave_component_loader.cc  brave_component_loader.h  brave_webtorrent_navigation_throttle.cc  brave_webtorrent_navigation_throttle.h
common/: pref_names.cc
components/brave_wallet/resources/extension/brave_wallet/: BUILD.gn  manifest.json
components/brave_wallet/resources/extension/brave_wallet/_locales/: out
patches/: base-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-chrome_content_browser_client.h.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-profiles-profile.cc.patch  chrome-browser-profiles-profile_impl.cc.patch  chrome-browser-profiles-profile_impl.h.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-safe_browsing-android-java-src-org-chromium-chrome-browser-safe_browsing-settings-RadioButtonGroupSafeBrowsingPreference.java.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-chrome_pages.cc.patch  chrome-browser-ui-views-bookmarks-bookmark_bar_view.cc.patch  chrome-browser-ui-views-toolbar-toolbar_view.cc.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  chrome-browser-ui-webui-settings-settings_localized_strings_provider.cc.patch  chrome-test-BUILD.gn.patch  components-permissions-BUILD.gn.patch  components-sync-protocol-device_info_specifics.proto.patch  components-sync-protocol-proto_visitors.h.patch  components-sync_device_info-device_info.h.patch  content-browser-renderer_host-navigation_request.cc.patch  content-public-browser-content_browser_client.h.patch  third_party-blink-renderer-core-BUILD.gn.patch  tools-gritsettings-resource_ids.spec.patch  tools-metrics-histograms-histograms_xml-histogram_suffixes_list.xml.patch  ui-base-BUILD.gn.patch  ui-native_theme-native_theme_mac.mm.patch
test/: BUILD.gn
(+160 files in other folders)
