source_set("notifications") {
  sources = [
    "ad_notification_platform_bridge.cc",
    "ad_notification_platform_bridge.h",
  ]

  if (is_android) {
    sources += [ "ad_notification_platform_bridge_android.cc" ]
  }

  deps = [
    "//base",
    "//brave/browser/brave_ads",
    "//brave/browser/profiles:util",
    "//brave/browser/ui/brave_ads",
    "//skia",
  ]

  if (is_android) {
    deps += [ "//brave/browser/brave_ads/android:jni_headers" ]
  }
}
